Refactor project: WSL and Linux builds

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,71 +1,69 @@
-# See https://hub.docker.com/u/nvidia
+# Base image for CUDA and OpenGL
 FROM nvidia/cudagl:11.4.1-runtime-ubuntu20.04
 
-# TBD
+# Build argument to specify if running in WSL
+ARG WSL=false
+
+# Allow installation of additional ROS packages during build
+# Usage: docker build --build-arg EXTRA_ROS_PKGS="ros-noetic-moveit ros-noetic-navigation" -t <ros_image> .
+ARG EXTRA_ROS_PKGS=""
+
+# Prevent interactive prompts during package installation
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Locale
+# Set locale to avoid localization issues
 ENV LANG=C.UTF-8
 ENV LC_ALL=C.UTF-8
 
-# TBD
+# Disable MIT-SHM for Qt applications to prevent shared memory issues
 ENV QT_X11_NO_MITSHM=1
 
 # NVIDIA runtime for GPU acceleration
 ENV NVIDIA_VISIBLE_DEVICES=all
 ENV NVIDIA_DRIVER_CAPABILITIES=all
 
-ENV LD_LIBRARY_PATH=/usr/lib/wsl/lib
+ENV LD_LIBRARY_PATH=${WSL:+/usr/lib/wsl/lib:}${LD_LIBRARY_PATH}
 
-# Install tools, ROS and system dependencies
+# Install core dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    git \
-    nano \
-    curl \
-    wget \
-    sudo \
-    gnupg2 \
-    mesa-utils \
-    lsb-release \
-    build-essential \
+    git nano curl wget sudo gnupg2 mesa-utils lsb-release build-essential \
     && rm -rf /var/lib/apt/lists/*
 
+# Set ROS distribution
 ENV ROS_DISTRO=noetic
 
 # Install ROS
 RUN echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list \
     && curl -sSL 'http://packages.ros.org/ros.key' | apt-key add - \
     && apt-get update && apt-get install -y --no-install-recommends \
-    python3-pip \
-    python3-rosdep \
-    python3-catkin-tools \
-    python3-rosinstall \
+    python3-pip python3-rosdep python3-catkin-tools python3-rosinstall \
     ros-${ROS_DISTRO}-desktop-full \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN apt-get update && apt-get install -y --no-install-recommends $EXTRA_ROS_PKGS \
     && rm -rf /var/lib/apt/lists/*
 
 # Initialize rosdep
 RUN rosdep init && rosdep update
 
-# Set user and workspace
+# Create a user for ROS
 ENV ROS_USER=ros
 ENV ROS_USER_HOME_DIR=/home/${ROS_USER}
 ENV ROS_WORKSPACE=${ROS_USER_HOME_DIR}/catkin_ws
 
-# Add user "ros", create the workspace, and give the user sudo permissions
 RUN useradd -m -s /bin/bash ${ROS_USER} \
     && mkdir -p ${ROS_WORKSPACE} \
     && chown -R ${ROS_USER}:${ROS_USER} ${ROS_USER_HOME_DIR} \
-    && echo "${ROS_USER}:password" | chpasswd \
-    && adduser ${ROS_USER} sudo
+    && echo "${ROS_USER} ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/${ROS_USER}
 
-# Copy and set up the entrypoint script
+# Copy the entrypoint script
 COPY ./docker/ros_entrypoint.sh /ros_entrypoint.sh
 RUN chmod +x /ros_entrypoint.sh
 
-# Switch to the ROS user
+# Switch to ROS user
 USER ${ROS_USER}
 
-# Default working directory for ROS workspace
+# Set workspace
 WORKDIR ${ROS_WORKSPACE}
 
 ENTRYPOINT ["/ros_entrypoint.sh"]
